# Isaac-GR00T

./: .gitignore  .gitmodules  README.md  finetune_lora_soarm101.sh  finetune_soarm101.sh  finetune_unitree_g1_dex3.sh  gr00t_config.py  gr00t_mask_config.py  orca_g1_locomanip_modality_config.py  pyproject.toml  run_ft_with_cosmos.sh  sft.sh  train_g1.sh  train_real.sh  train_real_task3.sh  train_real_task7.sh  train_sim.sh  train_task7.sh  unitree_g1_dex3_config.py
.claude/: settings.json
demo_data/cube_to_bowl_5_with_mask/masks/chunk-000/observation.images.front/: episode_000000_masks.npz
demo_data/cube_to_bowl_5_with_mask/masks/chunk-000/observation.images.wrist/: episode_000000_masks.npz
demo_data/cube_to_bowl_5_with_mask/meta/: episodes.jsonl  info.json  modality.json
docker/: .dockerignore  Dockerfile  README.md  build.sh
examples/BEHAVIOR/: README.md
examples/DROID/: README.md
examples/GR00T-WholeBodyControl/: README.md
examples/LIBERO/: README.md
examples/PointNav/: README.md
examples/SO100/: README.md  finetune_so100.sh
examples/SimplerEnv/: README.md
examples/mask-guided-background-suppression/: README.md  so101_config.py  test_extra_augmentation.py
examples/robocasa/: README.md
examples/robocasa-gr1-tabletop-tasks/: README.md
getting_started/: data_config.md  real_world_deployment.md
getting_started/examples/: eval_gr00t_so101.py  eval_lerobot.py
gr00t/configs/: finetune_config.py
gr00t/configs/data/: data_config.py  embodiment_configs.py
gr00t/configs/model/: gr00t_n1d6.py
gr00t/data/: dataset.py  schema.py  stats.py  types.py
gr00t/data/dataset/: lerobot_episode_loader.py  sharded_single_step_dataset.py
gr00t/data/state_action/: action_chunking.py  pose.py  state_action_processor.py
gr00t/data/transform/: __init__.py  stage.py  video.py
gr00t/eval/: open_loop_eval.py  rollout_policy.py
gr00t/eval/sim/: env_utils.py
gr00t/eval/sim/LIBERO/: libero_env.py
gr00t/eval/sim/SimplerEnv/: simpler_env.py
gr00t/eval/sim/robocasa-gr1-tabletop-tasks/: setup_RoboCasaGR1TabletopTasks.sh
gr00t/eval/sim/wrapper/: video_recording_wrapper.py
gr00t/experiment/: data_config.py  experiment.py  launch_finetune.py  trainer.py  utils.py
gr00t/model/: gr00t_n1.py  policy.py  transforms.py
gr00t/model/action_head/: flow_matching_action_head.py
gr00t/model/backbone/: eagle_backbone.py
gr00t/model/gr00t_n1d6/: image_augmentations.py  processing_gr00t_n1d6.py  setup.py
gr00t/model/modules/: dit.py
gr00t/model/modules/nvidia/Eagle-Block2A-2B-v2/: image_processing_eagle3_vl_fast.py  modeling_eagle3_vl.py  modeling_siglip2.py  processing_eagle3_vl.py
gr00t/policy/: server_client.py
gr00t/utils/: eval.py  video_utils.py
policy/: __init__.py  gr00t_config.py  gr00t_config_cosmos.py  gr00t_config_cosmos_mgpu.py
scripts/: activate_orin.sh  activate_spark.sh  activate_thor.sh  cosmos_service.py  debug_mask_noise.py  dump_dataloader_transforms.py  eval_policy.py  gr00t_finetune.py  inference_service.py  install_cosmos_gr00t.sh  test_cosmos_service.py  test_cosmos_transform_pipeline.py  test_video_cosmos_transform.py  visualize_tint_transforms.py  viz_bg_transform.py
scripts/deployment/: README.md  benchmark_inference.py  export_onnx_n1d6.py  standalone_inference_script.py
scripts/deployment/dgpu/: install_deps.sh
scripts/deployment/orin/: Dockerfile  install_deps.sh  pyproject.toml
scripts/deployment/spark/: Dockerfile  install_deps.sh  pyproject.toml
scripts/deployment/thor/: Dockerfile  install_deps.sh  pyproject.toml
scripts/lerobot_conversion/: pyproject.toml
tests/examples/: __init__.py  test_dataset_video_backend.py  utils.py
tests/examples/robocasa_gr1_tabletop/: test_example.py
tests/examples/so100/: test_example.py
tests/fixtures/: README.md
tests/fixtures/processor_config/: embodiment_id.json  processor_config.json  statistics.json
tests/gr00t/data/state_action/: test_eef_action_format.py
tests/gr00t/eval/sim/: test_env_utils.py
tests/gr00t/model/: test_variable_image_size.py
tests/gr00t/utils/: test_pyav_memory_leak.py  test_pyav_memory_leak_stress.py  test_torchcodec_import.py  test_video_backend.py
