# Default platform pyproject.toml (x86, GB200, and any non-Jetson GPU)

[tool.uv.workspace]
members = ["groot_infra"]

[build-system]
requires = ["setuptools>=67", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "gr00t"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "albumentations==1.4.18",
    "av==16.1.0",
    "diffusers==0.35.1",
    "dm-tree==0.1.8",
    "lmdb==1.7.5",
    "msgpack==1.1.0",
    "msgpack-numpy==0.4.8",
    "pandas==2.2.3",
    "peft==0.17.1",
    "termcolor==3.2.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.51.3",
    "tyro==0.9.17",
    "click==8.1.8",
    "datasets==3.6.0",
    "cryptography>=44.0.0",
    "einops==0.8.1",
    "gitpython==3.1.46",
    "gymnasium==1.2.2",
    "matplotlib==3.10.1",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "scipy==1.15.3",
    # torchcodec has no aarch64 Linux wheel — built from source on aarch64 by install_deps.sh
    "torchcodec==0.4.0; platform_machine != 'aarch64' or sys_platform != 'linux'",
    "wandb==0.23.0",
    "pyzmq==27.0.1",
    # deepspeed has no aarch64 Linux wheel
    "deepspeed==0.17.6; platform_machine != 'aarch64' or sys_platform != 'linux'",
    # triton is needed on aarch64 (GB200) but ships with torch on x86_64
    "triton==3.3.1; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "flash-attn==2.7.4.post1",
    "onnx>=1.20.0",
    "tensorrt>=10.14.1.48.post1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ipython",
    "pytest",
    "pytest-timeout",
    "build",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gr00t*"]

[tool.uv]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
triton = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and (platform_machine == 'aarch64')" },
]
flash-attn = [
    { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.7cxx11abiFALSE-cp310-cp310-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.7.1", "numpy==1.26.4", "triton==3.3.1"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
    "gpu: tests that require a GPU",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["gr00t"]
exclude = [
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".venv",
    "dist",
    "logs",
    "*.ipynb",
    "gr00t/model/modules/nvidia/Eagle-Block2A-2B-v2",
    "external_dependencies",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = false
split-on-trailing-comma = false
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
